--- a/lecturas2.html
+++ b/lecturas2.html
@@ -72,43 +72,38 @@
 
   <article>
 
-  <p>Los diferentes servicios de seguridad dependen unos de otros jerárquicamente, así si no exista el primero no puede aplicarse el siguiente:<br><br>
+  <p>1.3. Elementos vulnerables en un S.I.: Hw, Sw, Datos.<br><br>
 
-<u>Disponibilidad:</u> Se trata de la capacidad de un servicio, de unos datos o de un sistema a ser accesible y utilizable por los usuarios o procesos autorizados cuando lo requieran. También se refiere a la capacidad de que la información pueda ser recuperada en el momento que se necesite.<br>
-
-<u>Confidencialidad:</u> Se trata de la cualidad que debe poseer un documento o archivo para que éste solo se entienda de manera comprensible o sea leído por la persona o sistema que esté autorizado. 
-Un ejemplo de control de la confidencialidad sería el uso cifrado de clave simétrica en el intercambio de mensajes.<br>
-
-<u>Integridad:</u> Es la cualidad que posee un documento o archivo que no ha sido alterado y que además permite comprobar que no se ha producido manipulación alguna en el documento original.<br>
-
-<u>Alta disponibilidad (Hight Availability):</u> son sistemas que están disponibles las 24 horas al día, 7 días a la semana, 365 días al año.<br> La disponibilidad se presenta en niveles: <br><br>
-• Base: Se produce paradas previstas e imprevistas.<br>
-• Alta: Incluyen tecnologías para disminuir el número y la duración de interrupciones imprevistas, aunque siempre existe alguna interrupción imprevista.<br>
-• Operaciones continuas: Utilizan tecnologías para asegurar que no hay interrupciones planificadas.<br>
-• Sistemas de disponibilidad continua: Se incluyen tecnologías para asegurarse que no habrá paradas imprevistas ni previstas.<br>
-• Sistemas de tolerancia al desastre: requieren de sistemas alejados entre sí para asumir el control en una interrupción provocada por un desastre.<br><br>
-
-<u>Autenticación:</u> Es la situación en la cual se puede verificar que un documento ha sido elaborado o pertenece a quien el documento dice. Las autenticaciones de los sistemas informático se realizan habitualmente mediante nombre y contraseña.<br> 
-
-<u>No repudio:</u> El no repudio o irrenunciabilidad es un servicio de seguridad estrechamente relacionado con la autenticación y que permite probar la participación de las partes en una comunicación.<br>
-Existen 2 posibilidades:<br>
-• No repudio en origen: el emisor no puede negar el envío porque el destinatario tiene pruebas del mismo el receptor recibe una prueba infalsificable del envío.<br>
-• No repudio de destino: el receptor no puede negar que recibió el mensaje porque el emisor tiene pruebas de la recepción.<br><br>
-Si la autenticidad prueba quien es el autor y cuál es su destinatario, el no repudio prueba que el autor envió la comunicación (en origen) y que el destinatario la recibió (en destino).<br>
-
-</p>
-<p>
+Seguridad es un concepto asociado a la certeza, falta de riesgo o contingencia conviene aclarar que no siendo posible la certeza absoluta el elemento de riesgo está siempre presente independientemente de las medidas que tomemos por lo que debemos hablar de niveles de seguridad, la seguridad absoluta no es posible y en adelante entenderemos que la seguridad informática es un conjunto de técnicas encaminadas a obtener niveles altos de seguridad, la seguridad es un problema integral, los problemas de seguridad informática no pueden ser tratados aisladamente ya que la seguridad de todo el sistema es igual a su punto más débil. En la siguiente imagen se puede apreciar la aplicación de un usuario y contraseña como arquitectura en la seguridad de la información.<br></p>
 
 <figure>
-                        <img src="img/planeta.jpg" alt="Diseno">
+                        <img src="img/contraseña.jpg" alt="Diseno">
                     </figure>
-                        <br>
-                    </p>
 
-<div id="apDiv28"><a href="lecturas2.html" class="_blank"><img src="img/siguiente.png" class="menu" title="Continuar lectura" border="0" /></a></div>
+<p>El uso de sofisticados algoritmos y métodos es inútil si no garantizamos la confidencialidad de las estaciones de trabajo, por otra parte, existe algo que los hackers llaman ingeniería asociada que consiste simplemente en conseguir mediante un engaño que los usuarios autorizados revelen sus passwords, por lo tanto, la educación de los usuarios es fundamental para que la tecnología de seguridad pueda funcionar.<br>
 
 
-<div id="apDiv29"><a href="lecturas.html" class="_blank"><img src="img/atras.png" class="menu" title="Página anterior" border="0" /></a></div>
+
+Los 3 elementos principales a proteger en cualquier sistema informático son el software, el hardware y los datos. Por hardware entendemos el conjunto de todos los elementos físicos de un sistema informático como CPU, terminales, cableados, medios de almacenamiento secundarios, tarjeta de red, etc... Por software entendemos el conjunto de programas lógicos que hacen funcionar el hardware tanto sistemas operativos como aplicaciones y por datos el conjunto de información lógica que3 Amenazas Física maneja el software y el hardware como por ejemplo paquetes que circulan por un cable de red o entradas de una base de datos.<br>
+Habitualmente los datos constituyen los 3 principales elementos a escoger ya que es el más amenazado y seguramente el más difícil de recuperar. También tenemos que ser conscientes de que las medidas de seguridad que deberán establecerse comprenden el hardware el sistema operativo, las comunicaciones, medidas de seguridad física, controles organizativos y legales.<br><br>
+
+1.4 Las amenazas.<br>
+
+Las amenazas de un sistema informático pueden provenir desde un hacker remoto que entra en nuestro sistema desde un troyano, pasando por un programa descargando de forma gratuita que nos ayuda a gestionar nuestras fotos pero que supone una puerta trasera a nuestro sistema permitiendo la entrada a espías hasta la entrada no deseada al sistema mediante una contraseña de bajo nivel de seguridad; se pueden clasificar por tanto en amenazas provocadas por personas, lógicas y físicas. A continuación, se presenta a una relación de los elementos que potencialmente pueden amenazar a nuestro sistema. La primera son las personas, la mayoría de los ataques a nuestro sistema van a provenir de forma intencionada o inintencionada de personas y pueden causarnos enormes pérdidas. Aquí se describen brevemente los diferentes tipos de personas que pueden constituir un riesgo para nuestros sistemas:<br><br>
+
+1 Personas: <br>
+-Personal (se pasa por alto el hecho de la persona de la organización incluso a la persona ajeno a la estructura informática, puede comprometer la seguridad de los equipos).<br>
+-Ex-empleados (generalmente se trata de personas descontentas con la organización que pueden aprovechar debilidades de un sistema del que conocen perfectamente, pueden insertar troyanos, bombas lógicas, virus o simplemente conectarse al sistema como si aún trabajaran en la organización).<br>
+-Curiosos (son los atacantes juntos con los crakers los que más se dan en un sistema)<br>
+
+
+</p>
+
+
+<div id="apDiv28"><a href="lecturas3.html" class="_blank"><img src="img/siguiente.png" class="menu" title="Continuar lectura" border="0" /></a></div>
+
+
+<div id="apDiv29"><a href="lecturas1.html" class="_blank"><img src="img/atras.png" class="menu" title="Página anterior" border="0" /></a></div>
 
 
       			</article>
