--- a/lecturas3.html
+++ b/lecturas3.html
@@ -72,43 +72,32 @@
 
   <article>
 
-  <p>Los diferentes servicios de seguridad dependen unos de otros jerárquicamente, así si no exista el primero no puede aplicarse el siguiente:<br><br>
-
-<u>Disponibilidad:</u> Se trata de la capacidad de un servicio, de unos datos o de un sistema a ser accesible y utilizable por los usuarios o procesos autorizados cuando lo requieran. También se refiere a la capacidad de que la información pueda ser recuperada en el momento que se necesite.<br>
-
-<u>Confidencialidad:</u> Se trata de la cualidad que debe poseer un documento o archivo para que éste solo se entienda de manera comprensible o sea leído por la persona o sistema que esté autorizado. 
-Un ejemplo de control de la confidencialidad sería el uso cifrado de clave simétrica en el intercambio de mensajes.<br>
-
-<u>Integridad:</u> Es la cualidad que posee un documento o archivo que no ha sido alterado y que además permite comprobar que no se ha producido manipulación alguna en el documento original.<br>
-
-<u>Alta disponibilidad (Hight Availability):</u> son sistemas que están disponibles las 24 horas al día, 7 días a la semana, 365 días al año.<br> La disponibilidad se presenta en niveles: <br><br>
-• Base: Se produce paradas previstas e imprevistas.<br>
-• Alta: Incluyen tecnologías para disminuir el número y la duración de interrupciones imprevistas, aunque siempre existe alguna interrupción imprevista.<br>
-• Operaciones continuas: Utilizan tecnologías para asegurar que no hay interrupciones planificadas.<br>
-• Sistemas de disponibilidad continua: Se incluyen tecnologías para asegurarse que no habrá paradas imprevistas ni previstas.<br>
-• Sistemas de tolerancia al desastre: requieren de sistemas alejados entre sí para asumir el control en una interrupción provocada por un desastre.<br><br>
-
-<u>Autenticación:</u> Es la situación en la cual se puede verificar que un documento ha sido elaborado o pertenece a quien el documento dice. Las autenticaciones de los sistemas informático se realizan habitualmente mediante nombre y contraseña.<br> 
-
-<u>No repudio:</u> El no repudio o irrenunciabilidad es un servicio de seguridad estrechamente relacionado con la autenticación y que permite probar la participación de las partes en una comunicación.<br>
-Existen 2 posibilidades:<br>
-• No repudio en origen: el emisor no puede negar el envío porque el destinatario tiene pruebas del mismo el receptor recibe una prueba infalsificable del envío.<br>
-• No repudio de destino: el receptor no puede negar que recibió el mensaje porque el emisor tiene pruebas de la recepción.<br><br>
-Si la autenticidad prueba quien es el autor y cuál es su destinatario, el no repudio prueba que el autor envió la comunicación (en origen) y que el destinatario la recibió (en destino).<br>
-
-</p>
-<p>
+  <p>-Hackers (una persona que intenta tener acceso no autorizado a los recursos de la red con intención maliciosa, aunque no siempre tiende a ser esa su finalidad).<br>
+-Crackers (es un término más preciso para describir una persona que intenta obtener acceso no autorizado a los recursos de la red con intención maliciosa).<br>
+-Intrusos remunerados (se trata de personas con gran experiencia en problemas de seguridad y un amplio conocimiento del sistema que son pagados por una tercera parte generalmente para robar secretos o simplemente para dañar la imagen de la organización).<br>
+<u>2 Amenazas lógicas:</u><br>
+-Software incorrecto (a los errores de programación se les llama Bugs y a los programas para aprovechar uno de estos fallos se les llama Exploits.)<br>
+-Herramientas de seguridad (cualquier herramienta de seguridad representa un arma de doble filo de la misma forma que un administrador las utiliza para detectar y solucionar fallos en sus sistemas o la subred completa un intruso las puede utilizar para detectar esos mismos fallos y aprovecharlos para atacar los equipos, herramientas como NESUS,SAINT o SATAN pasa de ser útiles a peligrosas cuando la utilizan Crakers.)<br>
+-Puertas traseras (durante el desarrollo de aplicaciones grandes o sistemas operativos es habitual que entre los programadores insertar atajos en los sistemas habituales de autenticación del programa o núcleo de sistema que se esta diseñando.) Son parte de código de ciertos programas que permanecen sin hacer ninguna función hasta que son activadas en ese punto la función que realizan no es la original del programa si no una acción perjudicial.)<br>
+-Canales cubiertos (son canales de comunicación que permiten a un proceso trasferir información de forma que viole la política de seguridad del sistema.)<br>
+-Virus (un virus es una secuencia de código que se inserta en un fichero ejecutable denominado huésped de forma que cuando el archivo se ejecuta el virus también lo hace insertándose a si mismo en otros programas.)<br>
+-Gusanos (es un programa capaz de ejecutarse y propagarse por si mismo a través de redes en ocasiones portando virus o aprovechando bugs de los sistemas a los que se conecta para dañarlos a ser difíciles de programar su número no es muy elevado pero el daño que causa es muy grave.)<br>
+-Caballos de troya (son instrucciones escondidas en un programa de forma que este parezca realizar las tareas que un usuario espera del pero que realmente ejecuta funciones ocultas.), Programas conejo o bacterias (bajo este nombre se conoce a este programa que no hace nada útil si no que simplemente se delimitan a reproducirse hasta que el número de copias acaba con los recursos del sistema produciendo una negación del servicio.
+<br></p>
 
 <figure>
-                        <img src="img/planeta.jpg" alt="Diseno">
+                        <img src="img/spyware.jpg" alt="Diseno">
                     </figure>
-                        <br>
-                    </p>
 
-<div id="apDiv28"><a href="lecturas2.html" class="_blank"><img src="img/siguiente.png" class="menu" title="Continuar lectura" border="0" /></a></div>
+<p><u>3 Amenazas Físicas:</u> Robos, sabotajes, destrucción de sistemas. Suministro eléctrico. Condiciones atmosféricas. Catástrofes naturales.<br>
+
+</p>
 
 
-<div id="apDiv29"><a href="lecturas.html" class="_blank"><img src="img/atras.png" class="menu" title="Página anterior" border="0" /></a></div>
+<div id="apDiv28"><a href="lecturas4.html" class="_blank"><img src="img/siguiente.png" class="menu" title="Continuar lectura" border="0" /></a></div>
+
+
+<div id="apDiv29"><a href="lecturas2.html" class="_blank"><img src="img/atras.png" class="menu" title="Página anterior" border="0" /></a></div>
 
 
       			</article>
