--- a/lecturas4.html
+++ b/lecturas4.html
@@ -72,43 +72,44 @@
 
   <article>
 
-  <p>Los diferentes servicios de seguridad dependen unos de otros jerárquicamente, así si no exista el primero no puede aplicarse el siguiente:<br><br>
+  <p>1.5 Formas de protección de nuestro sistema:<br> Para proteger nuestros sistemas hemos de realizar una análisis de las amenazas potenciales, las pérdidas que podrían generar y la probabilidad de si ocurrencia a partir de este análisis hemos de diseñar una política de seguridad que defina responsabilidades y reglas a seguir para evitar tales amenazas o minimizar sus efectos en caso de que se produzcan, a esto se le llama mecanismo de seguridad, son la herramienta básica para garantizar la protección de los sistemas o la red. Estos mecanismos se pueden clasificar en activas o pasivas.<br>
+• Activas: evitan daños en los sistemas informáticos mediante empleo de contraseñas adecuadas en el acceso a sistemas y aplicaciones, encriptación de los datos en las comunicaciones, filtrado de conexiones en redes y el uso de software específico en seguridad informática.<br>
+• Pasiva: minimizan el impacto y los efectos causados por accidentes mediante uso de hardware adecuado, protección física, eléctrica y ambiental, realización de copias de seguridad.<br>
 
-<u>Disponibilidad:</u> Se trata de la capacidad de un servicio, de unos datos o de un sistema a ser accesible y utilizable por los usuarios o procesos autorizados cuando lo requieran. También se refiere a la capacidad de que la información pueda ser recuperada en el momento que se necesite.<br>
 
-<u>Confidencialidad:</u> Se trata de la cualidad que debe poseer un documento o archivo para que éste solo se entienda de manera comprensible o sea leído por la persona o sistema que esté autorizado. 
-Un ejemplo de control de la confidencialidad sería el uso cifrado de clave simétrica en el intercambio de mensajes.<br>
+<u>Ciberseguridad:</u> “Protección de activos de información, a través del tratamiento de amenazas que ponen en riesgo la información que es procesada, almacenada y transportada por los sistemas de información que se encuentran interconectados”. Según ISACA. <br>
 
-<u>Integridad:</u> Es la cualidad que posee un documento o archivo que no ha sido alterado y que además permite comprobar que no se ha producido manipulación alguna en el documento original.<br>
+<u>Ciberespacio:</u> entorno virtual, no físico creado por equipos de cómputo unidos para inter-operar en una red. Lo conforma todos los actores de interconexión, gestión de sistemas informáticos. Es decir, los medios físicos y lógicos que conforman las infraestructuras de los sistemas de comunicaciones e informáticos, junto con los usuarios que interactúan con estos sistemas. <br>
 
-<u>Alta disponibilidad (Hight Availability):</u> son sistemas que están disponibles las 24 horas al día, 7 días a la semana, 365 días al año.<br> La disponibilidad se presenta en niveles: <br><br>
-• Base: Se produce paradas previstas e imprevistas.<br>
-• Alta: Incluyen tecnologías para disminuir el número y la duración de interrupciones imprevistas, aunque siempre existe alguna interrupción imprevista.<br>
-• Operaciones continuas: Utilizan tecnologías para asegurar que no hay interrupciones planificadas.<br>
-• Sistemas de disponibilidad continua: Se incluyen tecnologías para asegurarse que no habrá paradas imprevistas ni previstas.<br>
-• Sistemas de tolerancia al desastre: requieren de sistemas alejados entre sí para asumir el control en una interrupción provocada por un desastre.<br><br>
+<u>Amenaza:</u> es la posibilidad de ocurrencia de cualquier tipo de evento o acción que puede producir un daño (material o inmaterial) sobre los elementos de un sistema. <br>
+Confidencialidad: Es la identificación y la garantía del origen de la información. Corroborar de quien dice ser, sea. <br><br>
 
-<u>Autenticación:</u> Es la situación en la cual se puede verificar que un documento ha sido elaborado o pertenece a quien el documento dice. Las autenticaciones de los sistemas informático se realizan habitualmente mediante nombre y contraseña.<br> 
 
-<u>No repudio:</u> El no repudio o irrenunciabilidad es un servicio de seguridad estrechamente relacionado con la autenticación y que permite probar la participación de las partes en una comunicación.<br>
-Existen 2 posibilidades:<br>
-• No repudio en origen: el emisor no puede negar el envío porque el destinatario tiene pruebas del mismo el receptor recibe una prueba infalsificable del envío.<br>
-• No repudio de destino: el receptor no puede negar que recibió el mensaje porque el emisor tiene pruebas de la recepción.<br><br>
-Si la autenticidad prueba quien es el autor y cuál es su destinatario, el no repudio prueba que el autor envió la comunicación (en origen) y que el destinatario la recibió (en destino).<br>
+2.  GENERALIDADES<br>
 
-</p>
-<p>
+2.1 Conceptos Básicos <br>
+Los conceptos más relevantes a considerar en relación con la variabilidad de los equipos de medición son los siguientes: <br>
+
+<u>Criptografía:</u> es la disciplina que se encarga del estudio de códigos secretos o llamados también códigos cifrados (en griego kriptos significa secreto y gráhos, escritura, es decir mantener en secreto el mensaje. La criptografía ha sido usada a través de los años para mandar mensajes confidenciales cuyo propósito es que sólo las personas autorizadas puedan entender el mensaje. Se derivan la Criptología y la Esteganografia. (Fernández, 2004). <br>
+
+Un ejemplo del funcionamiento básico de la encriptación de caracteres:<br>
+
+<br><br></p>
 
 <figure>
-                        <img src="img/planeta.jpg" alt="Diseno">
+                        <img src="img/criptografia.png" alt="Diseno">
                     </figure>
-                        <br>
-                    </p>
 
-<div id="apDiv28"><a href="lecturas2.html" class="_blank"><img src="img/siguiente.png" class="menu" title="Continuar lectura" border="0" /></a></div>
+<p><u>La Criptología:</u> Proviene del griego Krypto y logos, significa el estudio de lo oculto, lo escondido. Es la ciencia que trata los problemas teóricos relacionados con la seguridad en el intercambio de mensajes en clave entre un emisor y un receptor a través de un canal de comunicaciones.<br> 
+
+<u>Esteganografía:</u> La ciencia, denominada Esteganálisis, permite detectar información escondida en imágenes o archivos de sonido.<br> </p>
 
 
-<div id="apDiv29"><a href="lecturas.html" class="_blank"><img src="img/atras.png" class="menu" title="Página anterior" border="0" /></a></div>
+
+<div id="apDiv28"><a href="lecturas5.html" class="_blank"><img src="img/siguiente.png" class="menu" title="Continuar lectura" border="0" /></a></div>
+
+
+<div id="apDiv29"><a href="lecturas3.html" class="_blank"><img src="img/atras.png" class="menu" title="Página anterior" border="0" /></a></div>
 
 
       			</article>
