--- a/lecturas5.html
+++ b/lecturas5.html
@@ -72,43 +72,34 @@
 
   <article>
 
-  <p>Los diferentes servicios de seguridad dependen unos de otros jerárquicamente, así si no exista el primero no puede aplicarse el siguiente:<br><br>
+  <p>2.2 Ataques a sistemas informáticos <br><br>
 
-<u>Disponibilidad:</u> Se trata de la capacidad de un servicio, de unos datos o de un sistema a ser accesible y utilizable por los usuarios o procesos autorizados cuando lo requieran. También se refiere a la capacidad de que la información pueda ser recuperada en el momento que se necesite.<br>
+Un ataque informático consiste en aprovechar alguna debilidad o falla (vulnerabilidad) en el software, en el hardware, e incluso, en las personas que forman parte de un ambiente informático; a fin de obtener un beneficio, por lo general de índole económico, causando efectos negativos en la seguridad del sistema, que luego repercute directamente en los activos de la organización. <br>
+Para minimizar el impacto negativo provocado por ataques, existen procedimientos y mejores prácticas que facilitan la lucha contra las actividades delictivas y reducen notablemente el campo de acción de los ataques. <br>
+Uno de los pasos más importantes en seguridad, es la educación. Comprender cuáles son las debilidades más comunes que pueden ser aprovechadas y cuáles son sus riesgos asociados, permitirá conocer de qué manera se ataca un sistema informático ayudando a identificar las debilidades y riesgos para luego desplegar de manera inteligente estrategias de seguridad efectivas.<br><br>
 
-<u>Confidencialidad:</u> Se trata de la cualidad que debe poseer un documento o archivo para que éste solo se entienda de manera comprensible o sea leído por la persona o sistema que esté autorizado. 
-Un ejemplo de control de la confidencialidad sería el uso cifrado de clave simétrica en el intercambio de mensajes.<br>
-
-<u>Integridad:</u> Es la cualidad que posee un documento o archivo que no ha sido alterado y que además permite comprobar que no se ha producido manipulación alguna en el documento original.<br>
-
-<u>Alta disponibilidad (Hight Availability):</u> son sistemas que están disponibles las 24 horas al día, 7 días a la semana, 365 días al año.<br> La disponibilidad se presenta en niveles: <br><br>
-• Base: Se produce paradas previstas e imprevistas.<br>
-• Alta: Incluyen tecnologías para disminuir el número y la duración de interrupciones imprevistas, aunque siempre existe alguna interrupción imprevista.<br>
-• Operaciones continuas: Utilizan tecnologías para asegurar que no hay interrupciones planificadas.<br>
-• Sistemas de disponibilidad continua: Se incluyen tecnologías para asegurarse que no habrá paradas imprevistas ni previstas.<br>
-• Sistemas de tolerancia al desastre: requieren de sistemas alejados entre sí para asumir el control en una interrupción provocada por un desastre.<br><br>
-
-<u>Autenticación:</u> Es la situación en la cual se puede verificar que un documento ha sido elaborado o pertenece a quien el documento dice. Las autenticaciones de los sistemas informático se realizan habitualmente mediante nombre y contraseña.<br> 
-
-<u>No repudio:</u> El no repudio o irrenunciabilidad es un servicio de seguridad estrechamente relacionado con la autenticación y que permite probar la participación de las partes en una comunicación.<br>
-Existen 2 posibilidades:<br>
-• No repudio en origen: el emisor no puede negar el envío porque el destinatario tiene pruebas del mismo el receptor recibe una prueba infalsificable del envío.<br>
-• No repudio de destino: el receptor no puede negar que recibió el mensaje porque el emisor tiene pruebas de la recepción.<br><br>
-Si la autenticidad prueba quien es el autor y cuál es su destinatario, el no repudio prueba que el autor envió la comunicación (en origen) y que el destinatario la recibió (en destino).<br>
-
-</p>
-<p>
+Equipos informáticos para la seguridad informática:<br>
+3.  FIREWALLS<br>
+Cada computadora conectada a internet (y, hablando más genéricamente, a cualquier red informática) es susceptible a ser víctima de un ataque de un pirata informático. La metodología empleada generalmente por el pirata informático consiste en barrer la red (enviando paquetes de datos de manera aleatoria) en busca de una máquina conectada, y luego buscar un "agujero" de seguridad, el cual utilizará para acceder a los datos que allí se encuentren. <br>
+Esta amenaza es todavía mayor si la computadora está permanentemente conectada a Internet. Las razones son varias: <br>
+- La PC objeto puede estar conectada sin ser supervisada permanentemente.<br> 
+- La PC objeto está conectada generalmente utilizando banda ancha. <br>
+- La PC objeto no cambia (o muy poco) la dirección IP.<br>
+Por lo tanto, es necesario que las redes de empresas y los usuarios de internet que posean una conexión con cable o ADSL, protegerse de las intrusiones instalando un dispositivo de protección. En ese momento es que entra en acción el Firewall. ¿Qué es un firewall?
+<br></p>
 
 <figure>
-                        <img src="img/planeta.jpg" alt="Diseno">
+                        <img src="img/firewall.gif" alt="Diseno">
                     </figure>
-                        <br>
-                    </p>
 
-<div id="apDiv28"><a href="lecturas2.html" class="_blank"><img src="img/siguiente.png" class="menu" title="Continuar lectura" border="0" /></a></div>
+<p>Un firewall (llamado también "corta-fuego"), es un sistema que permite proteger a una computadora o una red de computadoras de las intrusiones que provienen de una tercera red (expresamente de Internet). El firewall es un sistema que permite filtrar los paquetes de datos que andan por la red. Se trata de un "puente angosto" que filtra, al menos, el tráfico entre la red interna y externa. En la siguiente imagen se puede apreciar la forma física de un cortafuego (firewall) de marca SonicWall.<br> </p>
 
 
-<div id="apDiv29"><a href="lecturas.html" class="_blank"><img src="img/atras.png" class="menu" title="Página anterior" border="0" /></a></div>
+
+<div id="apDiv28"><a href="lecturas6.html" class="_blank"><img src="img/siguiente.png" class="menu" title="Continuar lectura" border="0" /></a></div>
+
+
+<div id="apDiv29"><a href="lecturas4.html" class="_blank"><img src="img/atras.png" class="menu" title="Página anterior" border="0" /></a></div>
 
 
       			</article>
